fix: add 'overflow: hidden, for content that wider than their boundaries

--- a/source/sass/blocks/buy-app.scss
+++ b/source/sass/blocks/buy-app.scss
@@ -2,6 +2,7 @@
   background-color: $bg-color-grayish;
   clip-path: polygon(0 25px, 100% 0, 100% 100%, 0 100%);
   margin-top: 40px;
+  overflow: hidden;
   text-align: center;
   width: 100%;
 }
