--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -11,13 +11,12 @@
   bottom: 0;
   display: block;
   height: auto;
-  left: 50%;
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
+  overflow: hidden;
   position: absolute;
-  transform: translate(-50%, 0);
   width: 100%;
   z-index: 1;
 }
