--- a/source/sass/blocks/work-example.scss
+++ b/source/sass/blocks/work-example.scss
@@ -37,6 +37,7 @@ $hand-with-phone-height: 314;
 
 .work-example__picture-container {
   line-height: 0;
+  overflow: hidden;
 }
 
 .work-example__hand-with-phone {
